[project]
authors = [{ name = "Igor Kozyrenko", email = "igor@ikseek.com" }]
dependencies = ["ffmpeg-python","srt"]
description = "Dual language subtitle generation tool"
license = {file = "LICENSE"}
name = "dualsrt"
requires-python = ">=3.9"
version = "0.1"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
dualsrt = "dualsrt.cli:main"

[tool.setuptools]
packages = ["dualsrt"]
